--- a/{{cookiecutter.project_name}}/APP/CPUCode/.project
+++ b/{{cookiecutter.project_name}}/APP/CPUCode/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>{{cookiecutter.project_name}}_CPU_SRC</name>
+	<name>{{cookiecutter.project_name}}_CPUCode</name>
 	<comment></comment>
 	<manageMaxCompiler>false</manageMaxCompiler>
 	<manageMaxGenFD>false</manageMaxGenFD>
