--- a/{{cookiecutter.project_name}}/APP/RunRules/.project
+++ b/{{cookiecutter.project_name}}/APP/RunRules/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>{{cookiecutter.project_name}}_runrules</name>
+	<name>{{cookiecutter.project_name}}_RunRules</name>
 	<comment>Simulation</comment>
 	<manageMaxCompiler>false</manageMaxCompiler>
 	<manageMaxGenFD>false</manageMaxGenFD>
