--- a/{{cookiecutter.project_name}}/APP/CPUCode/Makefile.rules
+++ b/{{cookiecutter.project_name}}/APP/CPUCode/Makefile.rules
@@ -4,7 +4,7 @@ ifndef RUNRULE
   $(error The RUNRULE environment variable is not set. Usage: 'make RUNRULE="<RunRule>"')
 endif
 
-RUNRULE_DIR= ../runrules/$(RUNRULE)
+RUNRULE_DIR= ../RunRules/$(RUNRULE)
 include $(RUNRULE_DIR)/Makefile.settings
 include Makefile.files.include 
 
